# machine-learning

./: README.md  pyproject.toml
classification/: logistic_regression.ipynb  softmax_regression.ipynb
gradient-descent/: gradient_descent.ipynb
linear-regression/: linear_regression.ipynb  locally_weighted_linear_regression.ipynb
optimization/: gradient_descent_synthetic.ipynb  newtons_method.ipynb
