[project]
name = "machine-learning"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
